# xlwings_utils

./: .gitignore  changelog.md  dropbox setup.py  pyproject.toml  readme.md
tests/: test_xlwings_utils.py
xlwings_utils/: LICENSE.txt  __init__.py  __main__.py  dropbox.py  github.py  local.py  nextcloud.py  xlwings_utils.bas  xlwings_utils.py
