[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "xlwings_utils"
authors = [
    { name = "Ruud van der Ham", email = "rt.van.der.ham@gmail.com" },
]
description = "xlwings_utils"
version = "25.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dropbox",
    "ssl",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/salabim/xlwings_utils"
Repository = "https://github.com/salabim/xlwings_utils"

[tool.setuptools]
packages = [
    "xlwings_utils",
]

[tool.setuptools.package-data]
"*" = [
    "*.json",
]
